--- a/src/js/settings/settings.html
+++ b/src/js/settings/settings.html
@@ -1,32 +1,35 @@
-<div class="auth-page">
+<div class="settings-page">
   <div class="container page">
     <div class="row">
-
       <div class="col-md-6 offset-md-3 col-xs-12">
-        <h1 class="text-xs-center" ng-bind="::$ctrl.title" ></h1>
-        <!-- los :: adelante de $ctrl son para que sea una 1 time way binding.
-        Como hay tantas variables que angular esta relojeando todo el tiempo, es bueno en las que se puede, hacerlas cambiar solo una vez. -->
-        <p class="text-xs-center">
-          <a ui-sref="app.login"
-            ng-show="$ctrl.authType === 'register'">
-            Have an account?
-          </a>
-          <a ui-sref="app.register"
-            ng-show="$ctrl.authType === 'login'">
-            Need an account?
-          </a>
-        </p>
+
+        <h1 class="text-xs-center">Your Settings</h1>
 
         <list-errors errors="$ctrl.errors"></list-errors>
 
         <form ng-submit="$ctrl.submitForm()">
           <fieldset ng-disabled="$ctrl.isSubmitting">
 
-            <fieldset class="form-group" ng-show="$ctrl.authType === 'register'">
+            <fieldset class="form-group">
+              <input class="form-control"
+                type="text"
+                placeholder="URL of profile picture"
+                ng-model="$ctrl.formData.image" />
+            </fieldset>
+
+            <fieldset class="form-group">
               <input class="form-control form-control-lg"
                 type="text"
                 placeholder="Username"
                 ng-model="$ctrl.formData.username" />
+            </fieldset>
+
+            <fieldset class="form-group">
+              <textarea class="form-control form-control-lg"
+                rows="8"
+                placeholder="Short bio about you"
+                ng-model="$ctrl.formData.bio">
+              </textarea>
             </fieldset>
 
             <fieldset class="form-group">
@@ -39,18 +42,26 @@
             <fieldset class="form-group">
               <input class="form-control form-control-lg"
                 type="password"
-                placeholder="Password"
+                placeholder="New Password"
                 ng-model="$ctrl.formData.password" />
             </fieldset>
 
             <button class="btn btn-lg btn-primary pull-xs-right"
-              type="submit" ng-bind="::$ctrl.title">
+              type="submit">
+              Update Settings
             </button>
 
           </fieldset>
         </form>
-      </div>
 
+        <!-- Line break for logout button -->
+        <hr />
+
+        <button class="btn btn-outline-danger" ng-click="$ctrl.logout()">
+          Or click here to logout.
+        </button>
+
+      </div>
     </div>
   </div>
 </div>
